ya se ve tu sueldo de vacaciones

--- a/templates/vacations/user/vacation_form_user.html
+++ b/templates/vacations/user/vacation_form_user.html
@@ -49,8 +49,8 @@
     <div class="col-md-3 mb-3">
       <div class="card p-3 text-center">
         <p class="mb-1">Vacaciones</p>
-        <h2>0 Días</h2>
-        <small class="text-muted">Tiempo disponible</small>
+        <h2>{{ vacation_balance }} Días</h2>
+        <small class="text-muted">Tiempo disponible (ultima actualizacion 30/06/2025)</small>
       </div>
     </div>
   </div>
