--- a/templates/courses/admin/wizard_form.html
+++ b/templates/courses/admin/wizard_form.html
@@ -305,8 +305,12 @@
                             
             <div class="d-flex justify-content-between mt-4">
             <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="offcanvas">Cancelar</button>
-            <button type="submit" class="btn btn-primary" data-bs-dismiss="offcanvas">Guardar</button>
-        </div>
+            <div>
+                <button type="submit" class="btn btn-success me-2" id="save-add-another">Guardar y agregar otra</button>
+                <button type="submit" class="btn btn-primary" id="save-close" data-bs-dismiss="offcanvas">Guardar</button>
+            </div>
+            </div>
+
         </form>
   </div>
 </div>
