--- a/templates/courses/admin/admin_courses.html
+++ b/templates/courses/admin/admin_courses.html
@@ -117,17 +117,27 @@
                         <div class="card-body d-flex flex-column">
                         <h6 class="card-title text-truncate">{{ course.title }}</h6>
 
-                        <div class="mb-2">
-                            {% if course.deadline_date %}
-                            {% if course.deadline_date <= today %}
-                                <span class="badge bg-danger">Inactivo</span>
-                            {% else %}
-                                <span class="badge bg-success">Activo</span>
-                            {% endif %}
-                            {% else %}
-                            <span class="badge bg-secondary">No definido</span>
-                            {% endif %}
-                        </div>
+                            <div class="mb-2 d-flex justify-content-between align-items-center">
+                                <!-- Estado del curso -->
+                                {% if course.deadline_date %}
+                                    {% if course.deadline_date <= today %}
+                                        <span class="badge bg-danger">Inactivo</span>
+                                    {% else %}
+                                        <span class="badge bg-success">Activo</span>
+                                    {% endif %}
+                                {% else %}
+                                    <span class="badge bg-secondary">No definido</span>
+                                {% endif %}
+
+                                {% if course.config.audience == "segment" %}
+                                    {% if course.has_assignments %}
+                                        <span class="badge bg-success text-light">Asignado</span>
+                                    {% else %}
+                                        <span class="badge bg-warning text-dark">Sin asignar</span>
+                                    {% endif %}
+                                {% endif %}
+
+                            </div>
 
                         <div class="progress mb-2" style="height: 6px;">
                             <div class="progress-bar bg-info" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
