--- a/templates/courses/admin/admin_courses.html
+++ b/templates/courses/admin/admin_courses.html
@@ -128,9 +128,9 @@
                                 {% else %}
                                     <span class="badge bg-secondary">No definido</span>
                                 {% endif %}
-
+                                
                                 {% if course.config.audience == "segment" %}
-                                    {% if course.has_assignments %}
+                                    {% if course.assigned_count > 0 %}
                                         <span class="badge bg-success text-light">Asignado</span>
                                     {% else %}
                                         <span class="badge bg-warning text-dark">Sin asignar</span>
@@ -138,7 +138,6 @@
                                 {% endif %}
 
                             </div>
-
                         <div class="progress mb-2" style="height: 6px;">
                             <div class="progress-bar bg-info" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
