--- a/templates/courses/user/view_course.html
+++ b/templates/courses/user/view_course.html
@@ -35,18 +35,19 @@
     </div>
 
     <!-- evaluacion visible cuando se completa el curso -->
-    <div id="quizSectionWrapper" class="d-none mt-4 text-center">
+    <div id="quizSectionWrapper" class="d-none mt-4 text-center mb-3">
         <!-- Botón para abrir el modal -->
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#quizModal">
             Realizar evaluación
         </button>
     </div>
-
-{% if cert %}
-  <a href="{{ cert.file.url }}" class="btn btn-success" download>
-    Descargar Certificado
-  </a>
-{% endif %}
+    <div class="text-center">
+      {% if cert %}
+        <a href="{{ cert.file.url }}" class="btn btn-success" download>
+          Descargar Certificado
+        </a>
+      {% endif %}
+    </div>
 
 
 
