ahora se actualiza para descargar el certificado

--- a/templates/courses/user/view_course.html
+++ b/templates/courses/user/view_course.html
@@ -333,7 +333,7 @@ document.addEventListener('DOMContentLoaded', function () {
                         confirmButtonText: 'Aceptar'
                     }).then(() => {
                         localStorage.removeItem("completedLessons");
-                        window.location.href = "{% url 'course_wizard' %}";
+                        window.location.href = "{% url 'view_course_content' course.id %}";
                     });
 
 
