ya se puede cambiar de contraseñas

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -15,7 +15,9 @@
                     </div>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="settingsDropdown">
-                    <li><a class="dropdown-item" href="#">Cambiar contraseña</a></li>
+                <li>
+                    <a class="dropdown-item" href="{% url 'password_change' %}">Cambiar contraseña</a>
+                </li>
                 </ul>
             </li>
 
