ya se pueden cambiar de contraseñas tanto el usuario como el admin y tiene calidaciones

--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,23 +1,33 @@
 {% extends "layouts/base.html" %}
 {% block content %}
   <h2>Cambiar contraseña</h2>
-  <form method="post">{% csrf_token %}
+  <form method="post">
+    {% csrf_token %}
     {{ form.non_field_errors }}
-    <p>
+
+    <div class="mb-3">
       {{ form.old_password.label_tag }}<br>
       {{ form.old_password }}<br>
-      {{ form.old_password.errors }}
-    </p>
-    <p>
+    </div>
+
+    <div class="mb-3">
       {{ form.new_password1.label_tag }}<br>
       {{ form.new_password1 }}<br>
+      {% if form.new_password1.help_text %}
+      {% endif %}
       {{ form.new_password1.errors }}
-    </p>
-    <p>
+    </div>
+
+    <div class="mb-3">
       {{ form.new_password2.label_tag }}<br>
       {{ form.new_password2 }}<br>
+      {% if form.new_password2.help_text %}
+      {% endif %}
       {{ form.new_password2.errors }}
-    </p>
-    <button type="submit">Actualizar contraseña</button>
+    </div>
+
+    <button class="btn btn-primary" type="submit">
+      Actualizar contraseña
+    </button>
   </form>
 {% endblock %}
