--- a/templates/layouts/sidebar.html
+++ b/templates/layouts/sidebar.html
@@ -23,7 +23,7 @@
 
             {% if user.is_superuser %}
                 <li class="sidebar-item active">
-                    <a class="sidebar-link" href="{% url 'user_dashboard' %}">
+                    <a class="sidebar-link" href="{% url 'users:user_dashboard' %}">
                         <i class="fa-solid fa-user"></i></i><span class="align-middle">Usuarios</span>
                     </a>
                 </li>
