--- a/templates/users/manage_permissions.html
+++ b/templates/users/manage_permissions.html
@@ -7,28 +7,37 @@
 <form method="post">
   {% csrf_token %}
 
-  <h3>Grupos</h3>
-  {% for group in groups %}
-    <div>
-      <label>
-        <input type="checkbox" name="groups" value="{{ group.id }}"
-          {% if group in user_obj.groups.all %}checked{% endif %}>
-        {{ group.name }}
-      </label>
+  <div class="row">
+    <!-- Columna izquierda: Permisos individuales -->
+    <div class="col-md-8">
+      <h3>Permisos individuales</h3>
+      {% for perm in permissions %}
+        <div>
+          <label>
+            <input type="checkbox" name="permissions" value="{{ perm.id }}"
+              {% if perm in user_obj.user_permissions.all %}checked{% endif %}>
+            {{ perm.name }}
+          </label>
+        </div>
+      {% endfor %}
     </div>
-  {% endfor %}
 
-  <h3>Permisos individuales</h3>
-  {% for perm in permissions %}
-    <div>
-      <label>
-        <input type="checkbox" name="permissions" value="{{ perm.id }}"
-          {% if perm in user_obj.user_permissions.all %}checked{% endif %}>
-        {{ perm.name }}
-      </label>
+    <!-- Columna derecha: Grupos -->
+    <div class="col-md-4">
+      <h3>Grupos</h3>
+      {% for group in groups %}
+        <div>
+          <label>
+            <input type="checkbox" name="groups" value="{{ group.id }}"
+              {% if group in user_obj.groups.all %}checked{% endif %}>
+            {{ group.name }}
+          </label>
+        </div>
+      {% endfor %}
     </div>
-  {% endfor %}
+  </div>
 
   <button type="submit" class="btn btn-primary mt-3">Guardar</button>
 </form>
 {% endblock %}
+
