--- a/templates/users/admin_reset_password.html
+++ b/templates/users/admin_reset_password.html
@@ -1,18 +1,36 @@
 {% extends "layouts/base.html" %}
-{% block title %}Restablecer contraseña{% endblock %}
+
 {% block content %}
-  <h2>Restablecer contraseña de {{ target_user.username }}</h2>
-  <form method="post" class="mt-3">
-    {% csrf_token %}
-    {{ form.non_field_errors }}
-    <div class="mb-3">
-      {{ form.new_password1.label_tag }}<br>
-      {{ form.new_password1 }} {{ form.new_password1.errors }}
-    </div>
-    <div class="mb-3">
-      {{ form.new_password2.label_tag }}<br>
-      {{ form.new_password2 }} {{ form.new_password2.errors }}
-    </div>
-    <button class="btn btn-danger">Restablecer contraseña</button>
-  </form>
+<div class="container d-flex justify-content-center">
+  <div class="col-md-6">
+    <h2 class="text-center mb-4">Restablecer contraseña de  {{ target_user.first_name }} {{ target_user.last_name }} ({{ target_user.username }})</h2>
+
+    <form method="post" class="mt-3">
+      {% csrf_token %}
+      {{ form.non_field_errors }}
+      
+      <div class="mb-3">
+        {{ form.new_password1.label_tag }}
+        {{ form.new_password1 }}
+        {{ form.new_password1.errors }}
+      </div>
+
+      <div class="mb-3">
+        {{ form.new_password2.label_tag }}
+        {{ form.new_password2 }}
+        {{ form.new_password2.errors }}
+      </div>
+
+      <!-- Botones alineados -->
+      <div class="row mt-4">
+        <div class="col text-start">
+          <a href="{% url 'users:user_dashboard' %}" class="btn btn-secondary">Regresar</a>
+        </div>
+        <div class="col text-end">
+          <button class="btn btn-danger">Restablecer contraseña</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
 {% endblock %}
