oculté lo de vacaciones y permisos

--- a/templates/authapp/home_user.html
+++ b/templates/authapp/home_user.html
@@ -52,9 +52,8 @@
     <div class="col-md-3">
       <div class="quick-access-card">
         <h6>Días de vacaciones disponibles</h6>
-        <h2>{{ vacation_balance }}</h2>
-        <small class="text-muted">Tiempo disponible (ultima actualizacion 30/06/2025)</small>
-        <a href="{% url 'vacation_request' %}" class="btn btn-success btn-sm">Ir →</a>
+        <p>próximamente</p>
+        <a  class="btn btn-success btn-sm">Ir →</a>
       </div>
     </div>
     <div class="col-md-3">
