--- a/templates/courses/user/wizard_form_user.html
+++ b/templates/courses/user/wizard_form_user.html
@@ -100,58 +100,65 @@
                 data-estado="{% if course.id in assigned_course_ids %}asignado {% endif %}{% if course.deadline_date and course.deadline_date <= today %} inactivo {% else %} activo{% endif %}">
 
                 <div class="card h-100 shadow-sm rounded-4 overflow-hidden curso-clickable">
+                {% if course.deadline_date and course.deadline_date <= today %}
+                    <div class="text-decoration-none text-dark" style="cursor: not-allowed;">
+                {% else %}
                     <a href="{% url 'view_course_content' course.id %}" class="text-decoration-none text-dark">
-                        {% if course.portrait %}
-                            <img src="{{ course.portrait.url }}" class="card-img-top" alt="Imagen del curso" style="height: 140px; object-fit: cover; object-position: center;">
+                {% endif %}
+
+                    {% if course.portrait %}
+                    <img src="{{ course.portrait.url }}" class="card-img-top" alt="Imagen del curso" style="height: 140px; object-fit: cover; object-position: center;">
+                    {% else %}
+                    <div class="bg-light d-flex align-items-center justify-content-center" style="height: 140px;">
+                        <i class="fa-solid fa-graduation-cap fa-3x text-secondary"></i>
+                    </div>
+                    {% endif %}
+
+                    <div class="card-body d-flex flex-column">
+                    <h6 class="card-title text-truncate">{{ course.title }}</h6>
+
+                    <div class="mb-2 d-flex justify-content-between align-items-center">
+                        {% if course.deadline_date %}
+                        {% if course.deadline_date <= today %}
+                            <span class="badge bg-danger">Inactivo</span>
                         {% else %}
-                            <div class="bg-light d-flex align-items-center justify-content-center" style="height: 140px;">
-                                <i class="fa-solid fa-graduation-cap fa-3x text-secondary"></i>
-                            </div>
+                            <span class="badge bg-success">Activo</span>
+                        {% endif %}
+                        {% else %}
+                        <span class="badge bg-secondary">No definido</span>
                         {% endif %}
 
-                        <div class="card-body d-flex flex-column">
+                        {% if course.id in completed_course_ids %}
+                        <span class="badge bg-primary">Finalizado</span>
+                        {% else %}
+                        <span class="badge bg-warning text-dark">Pendiente</span>
+                        {% endif %}
+                    </div>
 
-                            <h6 class="card-title text-truncate">{{ course.title }}</h6>
+                    <hr style="height: 6px; background-color:rgb(156, 156, 156); border: none; border-radius: 3px;">
 
-                            <div class="mb-2 d-flex justify-content-between align-items-center">
-                                <!-- Estado del curso -->
-                                {% if course.deadline_date %}
-                                    {% if course.deadline_date <= today %}
-                                        <span class="badge bg-danger">Inactivo</span>
-                                    {% else %}
-                                        <span class="badge bg-success">Activo</span>
-                                    {% endif %}
-                                {% else %}
-                                    <span class="badge bg-secondary">No definido</span>
-                                {% endif %}
+                    <small class="text-muted">
+                        Inicio: {{ course.created_at|date:"j M Y" }}<br>
+                        {% if course.deadline_date %}
+                        Fin: {{ course.deadline_date|date:"j M Y" }}
+                        {% else %}
+                        Sin vencimiento
+                        {% endif %}
+                    </small>
 
-                                <!-- Estado de Evaluación-->
-                                {% if course.id in completed_course_ids %}
-                                    <span class="badge bg-primary">Finalizado</span>
-                                {% else %}
-                                    <span class="badge bg-warning text-dark">Pendiente</span>
-                                {% endif %}
-                            </div>
+                    {% if course.config.audience == "all_users" or course.id in courses_with_all_users_assignment %}
+                        <span class="badge bg-primary mb-1">Público</span>
+                    {% else %}
+                        <span class="badge bg-success mb-1">Para ti</span>
+                    {% endif %}
 
-                            <hr style="height: 6px; background-color:rgb(156, 156, 156); border: none; border-radius: 3px;">
+                    </div>
 
-                            <small class="text-muted">
-                                Inicio: {{ course.created_at|date:"j M Y" }}<br>
-                                {% if course.deadline_date %}
-                                    Fin: {{ course.deadline_date|date:"j M Y" }}
-                                {% else %}
-                                    Sin vencimiento
-                                {% endif %}
-                            </small>
-
-                            <!-- 🏷️ Etiqueta si es público para todos los usuarios -->
-                            {% if course.config.audience == "all_users" or course.id in courses_with_all_users_assignment %}
-                                    <span class="badge bg-primary mb-1">Público</span>
-                                {% else %}
-                                    <span class="badge bg-success mb-1">Para tí</span>
-                            {% endif %} 
-                        </div>
+                {% if course.deadline_date and course.deadline_date <= today %}
+                    </div>
+                {% else %}
                     </a>
+                {% endif %}
                 </div>
             </div>
         {% endfor %}
