ya tienes que cambiar tu contraseña la primera vez que entras

--- a/templates/users/admin_reset_password.html
+++ b/templates/users/admin_reset_password.html
@@ -24,7 +24,7 @@
       <!-- Botones alineados -->
       <div class="row mt-4">
         <div class="col text-start">
-          <a href="{% url 'users:user_dashboard' %}" class="btn btn-secondary">Regresar</a>
+          <a href="{% url 'user_dashboard' %}" class="btn btn-secondary">Regresar</a>
         </div>
         <div class="col text-end">
           <button class="btn btn-danger">Restablecer contraseña</button>
