--- a/templates/users/manage_permissions.html
+++ b/templates/users/manage_permissions.html
@@ -44,7 +44,7 @@
   <!-- Botones alineados -->
   <div class="row mt-4">
     <div class="col text-start">
-      <a href="{% url 'users:user_dashboard' %}" class="btn btn-secondary">Regresar</a>
+      <a href="{% url 'user_dashboard' %}" class="btn btn-secondary">Regresar</a>
     </div>
     <div class="col text-end">
       <button type="submit" class="btn btn-primary">Guardar</button>
